--- a/tensorflow/Uploaded_v2.ipynb
+++ b/tensorflow/Uploaded_v2.ipynb
@@ -33,7 +33,7 @@
     "import xgboost as xgb\n",
     "import math\n",
     "from sklearn.model_selection import train_test_split \n",
-    "from sklearn.metrics \n",
+    "import sklearn.metrics \n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
     "%matplotlib inline"
